--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -12,7 +12,7 @@
   "PaymentApiSettings": {
     "GetNet": {
       "AuthBasicUrl": "https://api-sandbox.getnet.com.br/auth/oauth/v2/token",
-      "BaseUrl": "https://api-homologacao.getnet.com.br/v1",
+      "BaseUrl": "https://api-sandbox.getnet.com.br/v1",
       "ClientId": "d96e4cc6-a5c2-49fe-ae83-2013a1d48d12",
       "ClientSecret": "2bfe8d4f-dc1b-45be-8154-aef1cedfcab2"
     },
