Fix [Authetication] Ajuste de autenticação (#2)

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -12,9 +12,9 @@
   "PaymentApiSettings": {
     "GetNet": {
       "AuthBasicUrl": "https://api-sandbox.getnet.com.br/auth/oauth/v2/token",
-      "BaseUrl": "https://api-sandbox.getnet.com.br/v1",
       "ClientId": "d96e4cc6-a5c2-49fe-ae83-2013a1d48d12",
-      "ClientSecret": "2bfe8d4f-dc1b-45be-8154-aef1cedfcab2"
+      "ClientSecret": "2bfe8d4f-dc1b-45be-8154-aef1cedfcab2",
+      "SellerId": "c4e1b79c-9f55-4577-a05c-349e61c64dfb"
     },
     "PixFuture": {
       "BaseUrl": "https://api.pixfuture.com",
