--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Jwt": {
+    "Key": "T3JKZ5ZEj4-AgKNvjAxzb-qIhDGGWaVGUqmQVlLaWOI",
+    "Issuer": "https://localhost:5001",
+    "Audience": "https://localhost:5001"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,7 +12,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresDatabase": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=1234"
+    "PostgresDatabase": "Host=localhost;Port=5432;Database=base;Username=base;Password=12345"
   },
   "PaymentApiSettings": {
     "GetNet": {
