--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -16,10 +16,10 @@
   },
   "PaymentApiSettings": {
     "GetNet": {
-      "AuthBasicUrl": "https://api-sandbox.getnet.com.br/auth/oauth/v2/token",
-      "ClientId": "d96e4cc6-a5c2-49fe-ae83-2013a1d48d12",
-      "ClientSecret": "2bfe8d4f-dc1b-45be-8154-aef1cedfcab2",
-      "SellerId": "c4e1b79c-9f55-4577-a05c-349e61c64dfb"
+      "AuthBasicUrl": "https://api.getnet.com.br/auth/oauth/v2/token",
+      "ClientId": "eb3bdfc5-9820-4ef8-baad-d94600bd5907",
+      "ClientSecret": "9674d414-d08a-4e56-84d8-62d672bc66f6",
+      "SellerId": "661d6cd9-5484-44c1-92fc-ebc790f95926"
     },
     "PixFuture": {
       "BaseUrl": "https://api.pixfuture.com",
