Feature [Factory] Ajuste para definir a API de pagamento a ser usada no appsettings.json

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -10,6 +10,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "PaymentService": {
+    "GatewayType": "GetNet"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "PostgresDatabase": "Host=localhost;Port=5432;Database=base;Username=base;Password=12345"
@@ -17,6 +20,7 @@
   "PaymentApiSettings": {
     "GetNet": {
       "AuthBasicUrl": "https://api.getnet.com.br/auth/oauth/v2/token",
+      "BaseUrl": "https://api.getnet.com.br/v1/",
       "ClientId": "eb3bdfc5-9820-4ef8-baad-d94600bd5907",
       "ClientSecret": "9674d414-d08a-4e56-84d8-62d672bc66f6",
       "SellerId": "661d6cd9-5484-44c1-92fc-ebc790f95926"
