--- a/Presentation/Dockerfile
+++ b/Presentation/Dockerfile
@@ -1,11 +1,8 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
+EXPOSE 80
 
+# Estágio de build
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
@@ -15,10 +12,12 @@ COPY . .
 WORKDIR "/src/Presentation"
 RUN dotnet build "./Presentation.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
+# Estágio de publicação
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./Presentation.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
+# Estágio final
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
