Docker-compose test

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -10,6 +10,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:80"
+      }
+    }
+  },
   "PaymentService": {
     "GatewayType": "GetNet"
   },
