Feature [Mappers] Implementando mappers para formatação de dados

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -18,7 +18,12 @@
     }
   },
   "PaymentService": {
-    "GatewayType": "GetNet"
+    "Pix": {
+      "GatewayType": "GetNet"
+    },
+    "BankSlip": {
+      "GatewayType": "K8Pay"
+    }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
@@ -32,10 +37,12 @@
       "ClientSecret": "9674d414-d08a-4e56-84d8-62d672bc66f6",
       "SellerId": "661d6cd9-5484-44c1-92fc-ebc790f95926"
     },
-    "PixFuture": {
-      "BaseUrl": "https://api.pixfuture.com",
-      "ClientId": "your-pixfast-client-id",
-      "ClientSecret": "your-pixfast-client-secret"
+    "K8Pay": {
+      "AuthBasicUrl": "https://pagamentos.k8bank.com.br/PagamentosApi/token",
+      "BaseUrl": "https://pagamentos.k8bank.com.br/",
+      "ClientId": "7NyjVE087snzDfwDGD6xNpWuEHmr7N8UMHCcf74NkoU8",
+      "ClientSecret": "syq4sJ13t2LUAfKYXoDl5wzJ7C1bnLAXjpiKRtNMIhs8",
+      "AESKey": "EQBSUMFA190CDQGW"
     }
   }
 }
