--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -27,7 +27,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PostgresDatabase": "Host=localhost;Port=5432;Database=base;Username=base;Password=12345"
+    "PostgresDatabase": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=1234"
   },
   "PaymentApiSettings": {
     "GetNet": {
