--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -39,7 +39,7 @@
     },
     "K8Pay": {
       "AuthBasicUrl": "https://pagamentos.k8bank.com.br/PagamentosApi/token",
-      "BaseUrl": "https://pagamentos.k8bank.com.br/",
+      "BaseUrl": "https://pagamentos.k8bank.com.br/PagamentosApi/",
       "ClientId": "7NyjVE087snzDfwDGD6xNpWuEHmr7N8UMHCcf74NkoU8",
       "ClientSecret": "syq4sJ13t2LUAfKYXoDl5wzJ7C1bnLAXjpiKRtNMIhs8",
       "AESKey": "EQBSUMFA190CDQGW"
