Feature [BankSlip] Finalização implementação de pagando via boleto

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -17,6 +17,9 @@
       }
     }
   },
+  "FileStorage": {
+    "BasePath": "C:\\Users\\victo\\source\\repos\\PulsePay\\BankSlip"
+  },
   "PaymentService": {
     "Pix": {
       "GatewayType": "GetNet"
@@ -39,7 +42,7 @@
     },
     "K8Pay": {
       "AuthBasicUrl": "https://pagamentos.k8bank.com.br/PagamentosApi/token",
-      "BaseUrl": "https://pagamentos.k8bank.com.br/PagamentosApi/",
+      "BaseUrl": "https://pagamentos.k8bank.com.br/PagamentosApi/api/",
       "ClientId": "7NyjVE087snzDfwDGD6xNpWuEHmr7N8UMHCcf74NkoU8",
       "ClientSecret": "syq4sJ13t2LUAfKYXoDl5wzJ7C1bnLAXjpiKRtNMIhs8",
       "AESKey": "EQBSUMFA190CDQGW"
