Feature [CreditCard] Implementando possibilidade de pagamento via cartão de crédito GetNet

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Mappers\GetNet\BankSlip\" />
+    <Folder Include="Mappers\K8Pay\CreditCard\" />
     <Folder Include="Mappers\K8Pay\Pix\" />
   </ItemGroup>
 
