--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -26,6 +26,9 @@
     },
     "BankSlip": {
       "GatewayType": "K8Pay"
+    },
+    "CreditCard": {
+      "GatewayType": "GetNet"
     }
   },
   "AllowedHosts": "*",
