Feature [CreditCard] Implementação de pagamento do tipo cartão de crédito

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -20,6 +20,7 @@
   "FileStorage": {
     "BasePath": "C:\\Users\\victo\\source\\repos\\PulsePay\\BankSlip"
   },
+  //PaymentsTypes: GetNet, K8Pay
   "PaymentService": {
     "Pix": {
       "GatewayType": "GetNet"
@@ -28,7 +29,7 @@
       "GatewayType": "K8Pay"
     },
     "CreditCard": {
-      "GatewayType": "GetNet"
+      "GatewayType": "K8Pay"
     }
   },
   "AllowedHosts": "*",
