--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,4 +1,4 @@
-{
+ {
   "Jwt": {
     "Key": "T3JKZ5ZEj4-AgKNvjAxzb-qIhDGGWaVGUqmQVlLaWOI",
     "Issuer": "https://localhost:5001",
@@ -20,7 +20,7 @@
   "FileStorage": {
     "BasePath": "C:\\Users\\victo\\source\\repos\\PulsePay\\BankSlip"
   },
-  //PaymentsTypes: GetNet, K8Pay
+  //PaymentsTypes: GetNet, K8Pay, Cielo
   "PaymentService": {
     "Pix": {
       "GatewayType": "GetNet"
@@ -29,7 +29,7 @@
       "GatewayType": "K8Pay"
     },
     "CreditCard": {
-      "GatewayType": "K8Pay"
+      "GatewayType": "Cielo"
     }
   },
   "AllowedHosts": "*",
@@ -50,6 +50,12 @@
       "ClientId": "7NyjVE087snzDfwDGD6xNpWuEHmr7N8UMHCcf74NkoU8",
       "ClientSecret": "syq4sJ13t2LUAfKYXoDl5wzJ7C1bnLAXjpiKRtNMIhs8",
       "AESKey": "EQBSUMFA190CDQGW"
+    },
+    "Cielo": {
+      "AuthBasicUrl": "https://apisandbox.cieloecommerce.cielo.com.br/v2/auth/token",
+      "BaseUrl": "https://apisandbox.cieloecommerce.cielo.com.br/",
+      "MerchantId": "c03d5f2c-b4d7-402f-8c64-e7a3402e8a04",
+      "MerchantKey": "ROCFVAVZHMKVMSWFFEXVNSBCXDGKTMKVDROTIJIE"
     }
   }
 }
